feat(service): update updateEntrepot method to use EntrepotUpdateRequest for validation